--- a/facebook_clone_project_ui/pubspec.yaml
+++ b/facebook_clone_project_ui/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   cupertino_icons: ^1.0.0
   cached_network_image: ^2.3.3
   material_design_icons_flutter: ^4.0.5755
+  flutter_bloc: ^6.0.6
 
 dev_dependencies:
   flutter_test:
